--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" href="icon.png">
     <title>HTML EDITOR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
