--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     
     <h1 style="text-align: center;">Welcome to the HTML editor</h1>
-    <div class="button" id="run" onclick="myFunction"><p>Run</p></div>
+    <div class="button" id="run" onclick="compile();"><p>Run</p></div>
 
    
     
